# ticha-BE

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  temp.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ✨-feature-.md  🐛-bug-.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 15452612bba7_initialize.py  189e59255b47_add_profile_image_to_users.py  221f80fc6f4b_create_learning_progress_table.py  59568056aed8_.py  650063450aeb_check_schema_changes.py  8f86d7cc0389_create_learning_progress_table.py  927b7b4bc7bf_fix_learning_progress_table.py  9c50b61c0cb2_initial_migration.py  b48bccd81211_make_user_password_nullable_for_oauth_.py  bb3a8e9d57db_create_learning_progress_table.py  c3630e9eb4e0_add_refresh_token_column_to_users.py  d6740607e55f_add_choices_count_to_problems.py  deba6b6c7c7e_initial_migration.py  e8d86206ae53_create_learning_progress_table.py  e906cf4b3d69_add_google_oauth.py  f9734b421209_recreate_migrations.py
app/: main.py  seed.py
app/auth/: dependencies.py  google_auth.py  kakao_auth.py
app/core/: config.py  database.py  exceptions.py  public_routes.py  security.py
app/middleware/: auth_middleware.py  camel_case_middleware.py
app/models/: __init__.py  answer_sheet.py  base.py  chapter.py  grading_result.py  learning_progress.py  problem.py  problem_in_quiz.py  quiz.py  study_log.py  user.py  user_answer.py  user_problem_stat.py
app/public/: index.html  login.html  signup.html
app/routers/: auth.py  (+8 more)
tests/: test_main.py
(+20 files in other folders)
