[tool.poetry]
name = "ticha-be"
version = "0.1.0"
description = "Backend for Ticha AI"
authors = ["joosomi <wnthal1211@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
openapi = "^2.0.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
asyncmy = "^0.2.10"
pydantic = "^2.10.5"
asyncio = "^3.4.3"
pydantic-settings = "^2.7.1"
greenlet = "^3.1.1"
cryptography = "^44.0.0"
faker = "^35.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
pre-commit = "^4.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"